--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "eslint-config-next": "13.3.4",
     "firebase": "^9.22.0",
     "mongoose": "^7.1.0",
-    "next": "13.3.4",
+    "next": "^13.4.7",
     "next-auth": "^4.22.1",
     "nodemailer": "^6.9.3",
     "postcss": "^8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-toastify": "^9.1.3",
     "sharp": "^0.32.1",
